# modern-real-time-audio

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  readme-linux.md  readme.md
projects/DSP/: Biquad.cpp  Biquad.h  Delay.cpp  Delay.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  Flanger.cpp  Flanger.h  Meter.cpp  Meter.h  Oscillator.cpp  ParametricEqualizer.cpp  ParametricEqualizer.h  Ramp.h  RingMod.cpp  RingMod.h  SynthVoice.cpp  SynthVoice.h
projects/Delay/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/EnvelopeGenerator/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/Flanger/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/GUI/: MeterComponent.cpp  MeterComponent.h  MrtaLAF.cpp  MrtaLAF.h
projects/MidiHandler/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/Oscillators/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/ParametricEQ/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/RingModulator/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
projects/StateVariableFilter/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
